Added buttons to same page instead of new page

--- a/about.html
+++ b/about.html
@@ -30,7 +30,9 @@
 
     <div class="page-content">
       <h1>About</h1>
-      <p>Learn more about PictureTs.ai and our mission to revolutionize photography with AI.</p>
+      <p>At PictureTs.ai, we believe every moment deserves to be captured perfectly. Our mission is to empower photographers of all levels with intelligent AI technology that guides them to their perfect shot.</p>
+      <p>Through real-time composition analysis, professional-grade color grading, and personalized style recommendations, we're democratizing professional photography. Whether you're capturing a sunset, a portrait, or a fleeting moment, PictureTs.ai ensures you never miss the perfect photo again.</p>
+      <p>We're building the future where artificial intelligence becomes your creative partner, helping you see the world through a lens of endless possibility.</p>
     </div>
   </div>
   <script type="module" src="/main.js"></script>
