--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 
 <head>
   <meta charset="UTF-8" />
-  <link rel="icon" type="image/svg+xml" href="/vite.svg" />
+  <link rel="icon" type="image/svg+xml" href="./assets/vite.svg" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>PictureTs.ai - AI Photography Network</title>
   <meta name="description" content="The decentralized AI photography network.">
@@ -54,11 +54,11 @@
       </div>
       <div class="hero-visual">
         <div class="phone-container">
-          <img src="/phone.png" alt="Picture This App Interface" class="phone-img">
+          <img src="./assets/phone.png" alt="Picture This App Interface" class="phone-img">
           <div class="glow-effect"></div>
         </div>
         <div class="floating-lens">
-          <img src="/lens.png" alt="AI Lens" class="lens-img">
+          <img src="./assets/lens.png" alt="AI Lens" class="lens-img">
         </div>
 
         <!-- Stats overlay -->
