Fix broken links and JS imports for GitHub Pages

--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
         </p>
         <div class="hero-cta">
           <button id="pre-register-btn" class="btn-primary large">Pre-Register</button>
-          <a href="/gallery.html"><button class="btn-secondary large">View Gallery</button></a>
+          <a href="./gallery.html"><button class="btn-secondary large">View Gallery</button></a>
         </div>
       </div>
       <div class="hero-visual">
